tests/script_runtime_errors/subslice_bad_end/error.txt
Error: 
    2 | event[1:k]
      |         ^ Conflicting types, got string but expected integer